@@ -49,4 +49,4 @@
 #................................00000000 00000000 ................................       0        0        0
 
 echo "MTDINFO:"
-hexdump /dev/mtd1 -vs240 -e'32 "%_p" 2 "%08x "" " 32 "%_p" "%8d " 2 "%8x ""\n"' | head -n 60 | grep -v "^."
+hexdump /dev/mtd1 -vs240 -e'32 "%_p" 2 "%08x "" " 32 "%_p" "%8d " 2 "%8x ""\n"' | head -n 60 | grep -v "^\."
